# PDF-extracting-libraries-comparasion

./: .gitignore  projekt.ipynb  pyproject.toml
data/compare_docs/: ground_truth_1.txt  ground_truth_2.txt  ground_truth_3.txt  ground_truth_4.txt
