[project]
name = "pdf-extracting-libraries-comparasion"
version = "0.1.0"
description = ""
authors = [
    {name = "kacper",email = "kacpro944@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.1.4,<3.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "camelot-py (>=1.0.9,<2.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pypdf (<6.0.0)",
    "docling (>=2.70.0,<3.0.0)",
    "pymupdf4llm (>=0.2.9,<0.3.0)",
    "markitdown[all] (>=0.1.4,<0.2.0)",
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)",
    "azure-core (>=1.38.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "paddlepaddle (>=3.3.0,<4.0.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "easyocr (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"